--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,38 +1,27 @@
 html, body {
+	height:100%;
     margin: 0;
     font-family: arial, "Microsoft YaHei";
     background-color: #272822;
-    color: #FEFEFE;
-}
-#fileWrapper{
-	transition:all 0.5s ease;
-}
-#fileWrapper:hover{
-	opacity: 1!important;
-}
-
-#visualizer_wrapper{
-	text-align: center;
-}
-footer{
-	position: fixed;
-	bottom: 2px;
-	color:#aaa;
+	color: #FEFEFE;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 #button{
-	position: absolute;
-	left:0;
-	top:0;
-	right:0;
-	bottom:0;
-	margin:auto;
 	width:120px;
 	height: 40px;
 	font-size: 20px;
 	line-height: 40px;
-	color:yellow;
-	border:1px solid yellow;
+	color:#aaa;
+	border:1px solid currentColor;
 	border-radius: 5px;
 	text-align: center;
 	cursor: pointer;
+	pointer-events: none;
+	&[data-loaded=true]{
+		pointer-events: auto;
+		color:yellow;
+	}
 }
